# 30-Days-for-30-Deep-Learning-Model

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
configs/: README.md  example_cnn.yaml  example_mlp.yaml  example_transformer.yaml  mnist_cnn.yaml  mnist_mlp.yaml  mnist_mlp_iterable.yaml
dl_arch/: __init__.py  registry.py
dl_arch/configs/: cnn_config.yaml  mlp_config.yaml  transformer_config.yaml
dl_arch/data/: __init__.py  dataloader.py  dataset.py  examples.py  preprocessor.py
dl_arch/data/datasets/: __init__.py  mnist.py
dl_arch/evaluation/: __init__.py  evaluator.py
dl_arch/models/: __init__.py  base.py  examples.py  transformer.py
dl_arch/training/: __init__.py  trainer.py  trainer_new.py
dl_arch/utils/: __init__.py  checkpoint.py  common.py  config.py  logging.py
